--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
-          allure_results: target/allure-results
+          allure_results: main/target/allure-results
           gh_pages: gh-pages
 
       - name: Upload Allure results
@@ -48,11 +48,11 @@ jobs:
         if: always()
         with:
           name: allure-results
-          path: target/allure-results/
+          path: main/target/allure-results/
 
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: allure-report
-          path: target/site/allure-maven-plugin/
+          path: main/target/site/allure-maven-plugin/
