--- a/main/pom.xml
+++ b/main/pom.xml
@@ -15,8 +15,9 @@
 
         <log4j.version>2.7</log4j.version>
         <testNG.version>7.10.2</testNG.version>
-        <selenium.version>4.36.0</selenium.version>
+        <rest-assured.version>5.5.0</rest-assured.version>
         <allure-testng.version>2.30.0</allure-testng.version>
+        <gson.version>2.10.1</gson.version>
         <aspectj.version>1.9.22</aspectj.version>
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
     </properties>
@@ -46,14 +47,21 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>${selenium.version}</version>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>${allure-testng.version}</version>
+        </dependency>
+        <!-- Serialization-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
