--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "**" ]
   pull_request:
-    branches: [ "Task-3" ]
+    branches: [ "master" ]
 
 jobs:
   api-tests:
@@ -12,8 +12,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Test Code
         uses: actions/checkout@v4
+
+      - name: Checkout API Service
+        uses: actions/checkout@v4
+        with:
+          repository: bondarenkokate73/simbirsoft_sdet_project
+          path: api-service
+
+      - name: Start API Service with Docker Compose
+        run: |
+          cd api-service
+          docker-compose up --build -d
+
+      - name: Install netcat
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y netcat
+
+      - name: Wait for API service
+        run: |
+          timeout 120s bash -c '
+            until docker ps --filter "name=postgres" --format "{{.Status}}" | grep -q "healthy"; do
+              sleep 10;
+            done
+          '
+          timeout 120s bash -c '
+            while ! nc -z localhost 8080; do 
+              sleep 10;
+            done
+          '
+          sleep 20
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -31,6 +61,7 @@ jobs:
         run: |
           cd main
           mvn allure:report
+        if: always()
 
       - name: Publish Allure Report
         uses: simple-elf/allure-report-action@master
@@ -39,9 +70,8 @@ jobs:
           allure_results: main/target/allure-results
           gh_pages: gh-pages
 
-      - name: Upload Allure results
-        uses: actions/upload-artifact@v4
+      - name: Stop API Service
         if: always()
-        with:
-          name: allure-results
-          path: main/target/allure-results/
+        run: |
+          cd api-service
+          docker-compose down
