--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,18 @@ jobs:
           repository: bondarenkokate73/simbirsoft_sdet_project
           path: api-service
 
+      - name: Setup Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin
+
       - name: Start API Service with Docker Compose
         run: |
           cd api-service
-          docker-compose up --build -d
+          docker compose up --build -d
 
       - name: Install netcat
         run: |
@@ -74,4 +82,4 @@ jobs:
         if: always()
         run: |
           cd api-service
-          docker-compose down
+          docker compose down
