--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,19 +57,27 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Run API tests
+      - name: Generate Allure report
         run: |
           cd main
-          mvn clean test -Dsurefire.suiteXmlFiles=testng.xml
+          mvn allure:report
+        if: always()
 
-      - name: Generate and Publish Allure Report
+      - name: Prepare Allure Report
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
           allure_results: main/target/allure-results
           gh_pages: gh-pages
-          allure_report: allure-report
-          keep_reports: 20
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        if: always()
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-report
+          force_orphan: true
 
       - name: Stop API Service
         if: always()
