--- a/main/pom.xml
+++ b/main/pom.xml
@@ -19,6 +19,7 @@
         <allure-testng.version>2.30.0</allure-testng.version>
         <aspectj.version>1.9.25.1</aspectj.version>
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven-plugin.version>3.3.0</maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -61,10 +62,34 @@
             <version>${aspectj.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>7.13.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-plugin.version}</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- Allure plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
