--- a/main/pom.xml
+++ b/main/pom.xml
@@ -19,6 +19,7 @@
         <allure-testng.version>2.30.0</allure-testng.version>
         <aspectj.version>1.9.25.1</aspectj.version>
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <aShot.version>1.5.4</aShot.version>
     </properties>
 
     <dependencies>
@@ -60,6 +61,12 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>${aShot.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
